[package]
name = "zkwork_aleo_worker"
build = "build.rs"
version = "0.4.2"
edition = "2021"
authors = [ "The zk.work team <zk.work@6block.com>" ]
homepage = "https://zk.work"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"

[dependencies.bytes]
version = "1.0.0"

[dependencies.zkwork_aleo_protocol]
git = "https://github.com/6block/zkwork_aleo_protocol.git"
branch = "aleo/testnet-beta"

[dependencies.tracing]
version = "0.1"

[dependencies.snarkvm]
git = "https://github.com/AleoNet/snarkVM.git"
rev = "d170a9f"
features = [ "console" ]

[dependencies.anyhow]
version = "1"

[dependencies.tokio]
version = "1.21"
features = [
"io-util",
"macros",
"net",
"rt-multi-thread",
"signal",
"sync",
"time"
]
[dependencies.tokio-util]
version = "0.7"
features = [ "codec" ]

[dependencies.structopt]
version = "0.3"

[dependencies.tokio-rustls]
version = "0.23.2"

[dependencies.tokio-stream]
version = "=0.1"

[dependencies.rustls-pemfile]
version = "1.0.1"

[dependencies.rayon]
version = "1"
[dependencies.num_cpus]
version = "1"

[dependencies.futures]
version = "0.3.21"
features = [ "thread-pool" ]

[dependencies.rand]
version = "0.8"

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["time", "env-filter", "local-time"]

[dependencies.crossterm]
version = "0.25.0"

[dependencies.secp256k1]
version = "0.25.0"
features = ["rand", "rand-std", "bitcoin_hashes"]

[dependencies.tokio-native-tls]
version = "0.3.0"

[build-dependencies.vergen]
version = "7"

[features]
cuda = ["snarkvm/cuda"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = false

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug = true
debug-assertions = true

[patch."https://github.com/AleoNet/snarkVM.git"]
snarkvm = { git = "https://github.com/scuwan/snarkVM.git", branch = "6block" }
